fix spacing issue in resizable chart definition

--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -222,7 +222,6 @@
 .ticker_table {
     flex-direction: column;
     width: 100%;
-    height: 100%;
     display: flex;
     gap: 8px;
     margin: 0 8px;
